# bsl-interpreter

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: example_template.yml  feature_request.yml  technical_issue.yml
.github/workflows/: auto_document.yaml  bump_tag.yml  pr_checks.yml
doc/source/: README.md  conf.py  documentation_requirements.txt
notebooks/: test-mediepipe.ipynb  test_building_language_translator.ipynb
src/: __init__.py
src/mediapipe-demo/: hand_landmarker.ipynb
tests/: nbstripout_test.py
utils/: open_docs.ps1  open_docs.sh  setup_venv.ps1  setup_venv.sh
