[tool.poetry]
name = "python-repo-template"
version = "0.1.0"
description = ""
authors = ["cameron-currie <cameron.currie@dsit.gov.uk>", "Sam Atkin <samuel.atkin@dsit.gov.uk"]
readme = "README.md"
package-mode = false # Change this to true if you want to build your code as a package

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.6.2"
ruff = "^0.3.1"
nbstripout = "^0.7.1"
pytest = "^8.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[tool.ruff]
line-length = 88
indent-width = 4

# Extend linting and formatting support to Jupyter Notebooks
extend-include = ["*.ipynb"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "doc"
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


# format docstrings code blocks
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-datetimez
    "C4",
    # isort
    "I",
    # pep8 naming convention
    "N"
]

[tool.ruff.lint.mccabe]
# Flag error when cyclomatic complexity is too high
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
